@@ -5,6 +5,7 @@
 	* HTML dump: output IBMgraphics and DECgraphics characters
 
 	* user interface improvements:
+	  - Autoexplore (from AceHack)
 	  - New category menu option: "Unidentified items"
 	  - 'X' toggles twoweaponing, explore mode is on alt-x resp. #xplore
 
